# pam-oauth-py

./: CLAUDE.md  README.md  pam_oauth2.py  pyproject.toml
src/pam_oauth2/: __init__.py  config.py  discovery.py  jwks_cache.py  logging.py  pam_sm.py  token_validator.py
tests/: conftest.py  test_config.py  test_discovery.py  test_integration.py  test_jwks_cache.py  test_pam_sm.py  test_token_validator.py
